2002-01-05  Christopher Faylor  <cgf@redhat.com>

	* dir.cc (opendir): Guarantee release of alloced fhandler structure on
	error.

2002-01-05  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (sig_handle): Set default action for SIGURG to SIG_IGN.

2002-01-05  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::init_std_file_from_handle): Don't treat NULL
	handle as errorneous.

2002-01-04  Christopher Faylor  <cgf@redhat.com>

	* cygmagic: Change logic for equality test.

2002-01-04  Christopher Faylor  <cgf@redhat.com>

	* dir.cc (opendir): Don't attempt to call sub-opendir if ENOENT.

2002-01-04  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc: Replace usage of AF_UNIX by Posix compliant AF_LOCAL
	throughout.
	(socketpair): Explicitly allow SOCK_STREAM and SOCK_DGRAM socket types
	in families AF_UNIX and AF_LOCAL.  Explicitly allow PF_UNSPEC, PF_LOCAL
	and PF_INET protocols.  Return error otherwise.  Implement datagram
	socketpairs.

2002-01-01  Christopher Faylor  <cgf@redhat.com>

	* speclib: Remove temp files automatically.

2002-01-01  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_socket::sun_path): New private member.
	(fhandler_socket::set_sun_path): New method.
	(fhandler_socket::get_sun_path): Ditto.
	* fhandler_socket.cc (fhandler_socket::fhandler_socket): Initialize
	sun_path to NULL.
	(fhandler_socket::~fhandler_socket): Free sun_path if needed.
	(fhandler_socket::set_sun_path): New method.
	* net.cc (cygwin_bind): Set sun_path to path of local socket file.
	(cygwin_getsockname): Add code to return correct sockaddr for unix
	domain sockets.