@@ -1,3 +1,12 @@
+2002-01-06  Corinna Vinschen  <corinna@vinschen.de>
+
+	* ioctl.cc (ioctl): Make third argument optional.
+	* include/sys/ioctl.h: Ditto in declaration.
+	* dtable.cc (dtable::init_std_file_from_handle): Revert previous
+	bogus patch.
+	* window.cc (WndProc): Raise SIGURG instead of SIGIO in case of FD_OOB
+	message.
+
 2002-01-05  Christopher Faylor  <cgf@redhat.com>
 
 	* dir.cc (opendir): Guarantee release of alloced fhandler structure on
